# myPdfTranslator

./: .gitignore  README.md  pdfTranslator.py  pyproject.toml  resources_rc.py  shell.nix  translator_helper.py  ui_mainwindow.py  verb_type_analysis.py  x_y_cut.py
files/: compile_rc  compile_ui  mainwindow.ui  pdfTranslator.desktop  resources.qrc
